fix z-index

--- a/resources/css/table.scss
+++ b/resources/css/table.scss
@@ -137,7 +137,7 @@ table td:hover{
         position: relative;
         .sticky-top {
             background: #eceff3;
-            z-index: 999;
+            z-index: 30;
         }
         //th {
         //    position: sticky;
